# obc-connectors-core

./: .pre-commit-config.yaml  Architecture.md  LICENSE  Makefile  Prompt.md  README.md  TEST_SUITE_SUMMARY.md  commit-message.txt  config.yaml  docker-compose.yml  obc-connectors-core.code-workspace  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  scafold.sh  setup.py  solution-design.md
.github/workflows/: test.yml
connectors/europe_pmc/: __init__.py  connector.py  connector.yaml
connectors/openalex/: __init__.py  connector.py  connector.yaml
connectors/pubmed/: README.md  __init__.py  connector.py  connector.yaml
docs/: README.md  connector-development-guide.md  quick-start.md
docs/connectors/: openalex.md  pubmed.md
examples/: 01_basic_ingestion.py  02_document_processing.py  03_worker_setup.py  README.md  openalex_example.py  pubmed_example.py
examples/config/: config.yaml
herpai_connector_sdk/: __init__.py  base.py  base_connector.py  connector_capabilities.py  connector_registry.py  exceptions.py  i_connector.py  models.py
herpai_connector_sdk/exceptions/: __init__.py  authentication_error.py  connector_error.py
herpai_connector_sdk/utils/: connector_loader.py  http.py  rate_limiter.py
herpai_ingestion/: __main__.py
herpai_ingestion/cli/: __init__.py  cli.py  debug.py  process.py  sources.py  storage.py
herpai_ingestion/connectors/: __init__.py  base.py  base_connector.py  base_source_connector.py  pagination_state.py  pagination_strategy.py
herpai_ingestion/domain/: __init__.py  author.py  citation.py  document.py  entity_mention.py
herpai_ingestion/entities/: document.py
herpai_ingestion/models/: document.py  ingestion_state.py
herpai_ingestion/processors/: base.py
herpai_ingestion/repositories/: document_repository.py  ingestion_state_repository.py
herpai_ingestion/services/: ingestion.py
herpai_ingestion/storage/: base.py
obc_connector_sdk/: __init__.py  base_connector.py  connector_registry.py  exceptions.py  i_connector.py  models.py
obc_connector_sdk/exceptions/: __init__.py  rate_limit_error.py
obc_connector_sdk/utils/: connector_loader.py  http.py  transforms.py
obc_ingestion/cli/: __init__.py  __main__.py  cli.py  debug.py
prompts/: connector.md  implementation.md
src/: config.py
src/cli/: catalog.py  ingest.py  main.py  scheduler.py
src/connectors/: base.py
src/models/: __init__.py  scheduled_job.py
src/repositories/: __init__.py  scheduled_job_repository.py  specifications.py
tests/: README.md  __init__.py  conftest.py  test_runner.py
tests/connectors/: test_connector_base.py  test_openalex_connector.py  test_openalex_connector_simple.py  test_pubmed_connector.py  test_pubmed_connector_simple.py
tests/integration/: test_connector_loader.py
tests/unit/: test_connector_capabilities.py  test_models.py  test_rate_limiter.py
tools/: validate_connectors.py
