[build-system]
requires = [ "hatchling" ]
build-backend = "hatchling.build"


[project]
name = "OpenBioCure-ingestion"
version = "0.2.0"
description = "OpenBioCure Ingestion System for biomedical literature"
requires-python = ">=3.9"
dependencies = [
"aiohttp>=3.8.0",
"click>=8.0.0",
"pyyaml>=6.0.0",
"sqlalchemy>=2.0.0",
"pydantic>=2.0.0",
"typer>=0.9.0",
"rich>=13.0.0"
]


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [ "obc_connector_sdk", "obc_ingestion", "connectors" ]
